# perception_oru

./: .gitignore  README.md  rosdep.yaml  stack.xml.backup
graph_localisation/: CMakeLists.txt  package.xml
graph_localisation/src/: graph_localisation_node.cpp  localisation_factory.cpp  localisation_type.cpp
graph_localisation/test/: test_localisation.cpp
graph_map/: .gitignore  CMakeLists.txt  README.md  docs.config  package.xml
graph_map/data/: README.md
graph_map/include/: graph_map_fuser.h  graph_map_fuser_impl.h  graphfactory.h
graph_map/launch/: 3d.rviz  3d_fuser_arla_2012_juli.launch  3d_fuser_ncfm_2017.launch  3d_fuser_oru_basement.launch  3d_oru_basement_ndtdl.launch  fuser.rviz  ndt_d2d_fuser.launch  showGraph.rviz  showMap.launch  showMap.rviz  testGraph.launch
graph_map/maps/: README.md
graph_map/src/: graph_map_fuser.cpp  graph_map_fuser_node.cpp  graphfactory.cpp  show_map.cpp
graph_map/test/: test_graph.cpp  test_particle_filter.cpp  test_serialization.cpp
graph_map_localisation/: CMakeLists.txt  package.xml
graph_map_localisation/include/: LocalisationFactory.h  LocalisationType.h
graph_map_localisation/src/: test_localisation.cpp
ndt_applications/: CMakeLists.txt  CMakeLists.txt.backup  mainpage.dox  manifest.xml.backup  package.xml  package.xml.backup
ndt_applications/src/: PoseInterpolationNavMsgsOdo.cpp  PoseInterpolationNavMsgsOdo.h  VelodyneBagReader.h  velodyneNDTMapper.cpp
ndt_calibration/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
ndt_calibration/launch/: calib.rviz  online_calib.launch  visualize.launch
ndt_calibration/src/: ndt_calib.cpp  ndt_calib_main.cpp  ndt_calib_online_node.cpp  ndt_calib_test.cpp
ndt_costmap/: CHANGELOG.rst  CMakeLists.txt  package.xml
ndt_costmap/launch/: ncfm_map_slice.launch  ncfm_map_slice_real.launch
ndt_costmap/src/: 2d_occ_map.cpp  level_splitter.cpp  ndt_costmap.cc  slice_map.cpp  traversability_map_simple.cpp  traversability_map_simple_HMT.cpp
ndt_evaluation/: CMakeLists.txt  package.xml
ndt_evaluation/scripts/: get_stat.sh  get_stat_d2d_sc_eval.sh  get_stat_filter_eval.sh  get_time_stat.sh  parse_stat_rpe.sh  parse_stat_rpe_d2d_eval.sh
ndt_evaluation/src/: registration_score_eval.cpp  registration_score_evaluate_main.cpp
ndt_feature_reg/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
ndt_feature_reg/eval/: README.txt  associate.py  create_association_files.sh  download_data.sh  evaluate_rpe.py  extract_data.sh  generate_all_results.sh  generate_result.sh  groundtruth_comparision.sh  perform_all_evaluations.sh  run_evaluation.sh
ndt_feature_reg/launch/: exp_ndt_feature_online.launch  ndt_feature_online.launch  replay_log_TUM_freiburg1_desk_ndt_feature_reg_node.launch
ndt_feature_reg/src/: exp_ndt_feature_reg_node.cc  exp_ndt_frame_proc.cpp  ndt_feature_eval.cc  ndt_feature_reg_node.cc  ndt_feature_viewer.cc  ndt_frame.cpp  ndt_frame_proc.cpp  ndt_frame_viewer.cpp
ndt_fuser/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.backup  CMakeLists.txt~  mainpage.dox  manifest.xml.backup  package.xml  package.xml.backup
ndt_fuser/include/: ndt_fuser.h  ndt_fuser_hmt.h
ndt_fuser/launch/: 3d_fuser.launch  64E_calibration.yaml  arla_fuser.launch  fuser_2d_logger_tf.launch  fuser_2dlaser.launch  fuser_2dlaser_gt.launch  fuser_2dlaser_tf.launch  fuser_hmt_vellodyne32.launch  fuser_iliad_online.launch  fuser_iliad_sim.launch  fuser_iliad_sim_2d.launch  fuser_kinect.launch  fuser_mpr.launch  fuser_velodyne16.launch  fuser_velodyne32.launch  fuser_velodyne64_kjula.launch  fuser_velodyne64_roundabout.launch  offline_mapping_kjula.launch  vel64_points.launch  velodyne_points_produce.launch
ndt_fuser/maps/: README.md
ndt_fuser/src/: init_test.cpp  ndt_fuser.cpp  ndt_fuser_from_depth.cpp  ndt_fuser_hmt.cpp  ndt_fuser_logger_node.cpp  ndt_fuser_node.cpp
ndt_generic/: CHANGELOG.rst  CMakeLists.txt  package.xml
ndt_generic/test/: eigen_test.cpp
ndt_localization/: CHANGELOG.rst  CMakeLists.txt  package.xml
ndt_localization/launch/: ALUFR_2_2d.launch  LAAS_2_2d.launch  Schipol_gate_c_pier_demo.launch  Schipol_small_area.launch  iliad_ncfm_sim.launch  laser_loc.launch  map_HMT.launch  ncfm_sim_laser.launch  ncfm_sim_laser_2d.launch  ncfm_sim_velodyne.launch  ncfm_sim_velodyne_pc.launch  new_test.launch  new_test_laser.launch  new_test_laser_filter.launch  new_test_pc.launch  new_test_pc_filter.launch  new_test_velodyne.launch  new_test_velodyne_filter.launch  schiphol.launch  test.launch  velodyne_Freibug.launch  velodyne_Freiburg.launch  velodyne_pts.launch  velodyne_schiphol_full_map.launch
ndt_localization/maps/: .gitignore  b101_o.pgm
ndt_localization/src/: ndt_mcl_2_lasers_node.cpp  ndt_mcl_2_lasers_node.cpp.orig  ndt_mcl_localization.cpp  ndt_mcl_localization_filter.cpp  ndt_mcl_node.cpp  velodyne_ndt_mcl_HMT_node.cpp  velodyne_ndt_mcl_node.cpp
ndt_map/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.backup  CMakeLists.txt~  manifest.xml.backup  package.xml  package.xml.backup
ndt_map/include/: adaptive_oc_tree.h  cell_vector.h  depth_camera.h  lazy_grid.h  ndt_cell.h  ndt_histogram.h  ndt_map.h  ndt_map_hmt.h  ndt_occupancy_map.h  oc_tree.h  pointcloud_utils.h  spatial_index.h
ndt_map/msg/: Map.msg  MapMetaData.msg  NDTCell.msg  NDTCellMsg.msg  NDTMap.msg  NDTVectorMapMsg.msg
ndt_map/src/: cell_vector.cpp  lazy_grid.cpp  ndt_cell.cpp  ndt_histogram.cpp  ndt_map.cpp  ndt_map_hmt.cpp
ndt_map/test/: batchTesterHistogramFPFH.cc  jffLazyGridTest_loading.cc  jffLazyGridTest_saving.cc  likelihoodSingleScan.cc  (+7 more)
ndt_map_builder/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.backup  mainpage.dox  manifest.xml.backup  package.xml  package.xml.backup
ndt_mcl/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.backup  mainpage.dox  manifest.xml.backup  package.xml  package.xml.backup
ndt_offline/: CHANGELOG.rst  CMakeLists.txt  package.xml
ndt_registration/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.backup  CMakeLists.txt~  manifest.xml.backup  package.xml  package.xml.backup  package.xml~
ndt_rviz/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+356 files in other folders)
