<?xml version="1.0"?>
<package>
  <name>ndt_calibration</name>
  <version>0.0.0</version>
  <description>The ndt_calibration package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="henrik.andreasson@oru.se">Henrik Andreasson</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <author email="henrik.andreasson@oru.se">Henrik Andreasson</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ndt_offline</build_depend>
  <build_depend>ndt_map</build_depend>
  <build_depend>ndt_registration</build_depend>
  <build_depend>ndt_visualisation</build_depend>
  <build_depend>ndt_rviz</build_depend>
  <build_depend>ndt_mcl</build_depend>
  <build_depend>ndt_offline</build_depend>
  <build_depend>ndt_generic</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>velodyne_msgs</build_depend>
  <build_depend>velodyne_pointcloud</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>libgsl</build_depend>
  
  <run_depend>ndt_offline</run_depend>
  <run_depend>ndt_map</run_depend>
  <run_depend>ndt_registration</run_depend>
  <run_depend>ndt_visualisation</run_depend>
  <run_depend>ndt_rviz</run_depend>
  <run_depend>ndt_mcl</run_depend>
  <run_depend>ndt_offline</run_depend>
  <run_depend>ndt_generic</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>velodyne_msgs</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>libgsl</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
