<?xml version="1.0"?>
<package>
  <name>ndt_costmap</name>
  <version>1.0.31</version>
  <description>The ndt_costmap package</description>

  <author>Todor Stoyanov</author>
  
  <maintainer email="todor.stoyanov@oru.se">Todor Stoyanov</maintainer>
  <maintainer email="tomasz.kucner@oru.se">Tomasz Kucner</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>ndt_map</build_depend>
  <build_depend>ndt_visualisation</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>opengl</build_depend>

  <run_depend>ndt_map</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>ndt_visualisation</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>opengl</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
