<?xml version="1.0"?>
<package>
  <name>ndt_evaluation</name>
  <version>0.0.0</version>
  <description>The ndt_evaluation package</description>

  <maintainer email="henrik.andreasson@oru.se">Henrik Andreasson</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <build_depend>ndt_registration</build_depend>
  <build_depend>ndt_generic</build_depend>
  <build_depend>ndt_map</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>

  <run_depend>ndt_registration</run_depend>
  <run_depend>ndt_generic</run_depend>
  <run_depend>ndt_map</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>

  <export>

  </export>
</package>
